Add tests and clean up test build warnings